--- a/app/src/main/res/layout/activity_registration.xml
+++ b/app/src/main/res/layout/activity_registration.xml
@@ -104,7 +104,7 @@
         android:layout_marginEnd="16dp"
         android:ems="10"
         android:hint="@string/reg_no"
-        android:inputType="number"
+        android:inputType="phone"
         android:textSize="16sp"
         app:layout_constraintBaseline_toBaselineOf="@+id/regNoTextView"
         app:layout_constraintEnd_toEndOf="parent" />
