--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -2,6 +2,10 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
 
     <item
+        android:id="@+id/showAll"
+        android:title="@string/show_all" />
+
+    <item
         android:id="@+id/search"
         android:title="@string/search" />
 
@@ -9,9 +13,9 @@
         android:id="@+id/add"
         android:title="@string/add" />
 
-    <item
-        android:id="@+id/remove"
-        android:title="@string/remove" />
+    <!--<item-->
+        <!--android:id="@+id/remove"-->
+        <!--android:title="@string/remove" />-->
 
     <item
         android:id="@+id/about"
