--- a/app/src/main/res/layout/activity_registration.xml
+++ b/app/src/main/res/layout/activity_registration.xml
@@ -153,7 +153,7 @@
                 android:orientation="horizontal">
 
                 <TextView
-                    android:id="@+id/permanentAddressTextViewTextView"
+                    android:id="@+id/addressTextView"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_margin="10dp"
@@ -163,7 +163,7 @@
                     android:textSize="14sp" />
 
                 <EditText
-                    android:id="@+id/permanentAddressEditText"
+                    android:id="@+id/addressEditText"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_margin="10dp"
