added database facility

--- a/app/src/main/res/layout/activity_search.xml
+++ b/app/src/main/res/layout/activity_search.xml
@@ -22,7 +22,7 @@
         android:layout_marginEnd="8dp"
         android:layout_marginStart="16dp"
         android:layout_marginTop="32dp"
-        android:text="@string/name"
+        android:text="@string/student_name"
         android:textAllCaps="true"
         android:textSize="16sp"
         app:layout_constraintEnd_toStartOf="@+id/nameEditText"
@@ -91,7 +91,7 @@
         android:layout_height="wrap_content"
         android:layout_marginEnd="16dp"
         android:ems="10"
-        android:hint="@string/name2"
+        android:hint="@string/empty"
         android:inputType="textPersonName"
         android:textSize="16sp"
         app:layout_constraintBaseline_toBaselineOf="@+id/nameTextView"
