--- a/app/src/main/res/layout/activity_showstudent.xml
+++ b/app/src/main/res/layout/activity_showstudent.xml
@@ -14,11 +14,11 @@
         android:contentDescription="@string/student_image"
         android:maxHeight="50dp"
         android:maxWidth="50dp"
-        android:scaleType="centerCrop"
+        android:scaleType="centerInside"
         app:layout_constraintBottom_toBottomOf="@+id/bloodGroupTextView"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@+id/studentNameTextView"
-        app:srcCompat="@drawable/hassan_sattar" />
+        app:srcCompat="@drawable/android_logo" />
 
     <TextView
         android:id="@+id/studentNameTextView"
@@ -27,7 +27,7 @@
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="16dp"
-        android:text="Hassan Sattar"
+        android:text="@string/student_name"
         android:textAllCaps="true"
         android:textColor="@android:color/black"
         android:textStyle="bold"
@@ -42,7 +42,7 @@
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
-        android:text="Abdul Sattar"
+        android:text="@string/father_name"
         android:textAllCaps="true"
         android:textColor="@android:color/black"
         android:textStyle="bold"
@@ -57,7 +57,7 @@
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
-        android:text="E-207 E-hostel"
+        android:text="@string/room"
         android:textAllCaps="true"
         android:textColor="@android:color/black"
         android:textStyle="bold"
@@ -72,7 +72,7 @@
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
-        android:text="Shinkiari, Mansehra, KP"
+        android:text="@string/address"
         android:textAllCaps="true"
         android:textColor="@android:color/black"
         android:textStyle="bold"
@@ -87,7 +87,7 @@
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
-        android:text="Blood group: A-"
+        android:text="@string/blood_group"
         android:textAllCaps="true"
         android:textColor="@android:color/black"
         android:textStyle="bold"
@@ -102,7 +102,7 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginEnd="8dp"
-        android:text="03439555320"
+        android:text="@string/phone_no"
         android:textColor="@android:color/black"
         app:layout_constraintBaseline_toBaselineOf="@+id/contact"
         app:layout_constraintEnd_toEndOf="parent"
@@ -114,7 +114,7 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginEnd="8dp"
-        android:text="Third"
+        android:text="@string/semester"
         android:textColor="@android:color/black"
         app:layout_constraintBaseline_toBaselineOf="@+id/semester"
         app:layout_constraintEnd_toEndOf="parent"
@@ -125,7 +125,7 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginEnd="8dp"
-        android:text="17-21"
+        android:text="@string/batch"
         android:textColor="@android:color/black"
         app:layout_constraintBaseline_toBaselineOf="@+id/batch"
         app:layout_constraintEnd_toEndOf="parent"
@@ -136,7 +136,7 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginEnd="8dp"
-        android:text="DCIS"
+        android:text="@string/dee_dme_dcis"
         android:textColor="@android:color/black"
         app:layout_constraintBaseline_toBaselineOf="@+id/department"
         app:layout_constraintEnd_toEndOf="parent"
@@ -147,7 +147,7 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginEnd="8dp"
-        android:text="hassansattar147@gmail.com"
+        android:text="@string/email"
         android:textColor="@android:color/black"
         app:layout_constraintBaseline_toBaselineOf="@+id/email"
         app:layout_constraintEnd_toEndOf="parent"
@@ -187,7 +187,7 @@
         android:layout_marginStart="8dp"
         android:background="@android:color/holo_green_light"
         android:onClick="goBack"
-        android:text="Call"
+        android:text="@string/call"
         android:textColor="@android:color/white"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/guideline2"
@@ -202,7 +202,7 @@
         android:layout_marginStart="8dp"
         android:background="@android:color/holo_orange_light"
         android:onClick="goBack"
-        android:text="Message"
+        android:text="@string/message"
         android:textColor="@android:color/white"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -214,7 +214,7 @@
         android:layout_height="wrap_content"
         android:layout_marginEnd="8dp"
         android:layout_marginTop="16dp"
-        android:text="Contact:"
+        android:text="@string/phone"
         android:textAllCaps="true"
         android:textColor="@android:color/black"
         android:textStyle="bold"
@@ -227,7 +227,7 @@
         android:layout_height="wrap_content"
         android:layout_marginEnd="8dp"
         android:layout_marginTop="8dp"
-        android:text="Semester:"
+        android:text="@string/semester"
         android:textAllCaps="true"
         android:textColor="@android:color/black"
         android:textStyle="bold"
@@ -240,7 +240,7 @@
         android:layout_height="wrap_content"
         android:layout_marginEnd="8dp"
         android:layout_marginTop="8dp"
-        android:text="Batch:"
+        android:text="@string/batch"
         android:textAllCaps="true"
         android:textColor="@android:color/black"
         android:textStyle="bold"
@@ -253,7 +253,7 @@
         android:layout_height="wrap_content"
         android:layout_marginEnd="8dp"
         android:layout_marginTop="8dp"
-        android:text="Department:"
+        android:text="@string/department"
         android:textAllCaps="true"
         android:textColor="@android:color/black"
         android:textStyle="bold"
@@ -266,7 +266,7 @@
         android:layout_height="wrap_content"
         android:layout_marginEnd="8dp"
         android:layout_marginTop="8dp"
-        android:text="Email:"
+        android:text="@string/email"
         android:textAllCaps="true"
         android:textColor="@android:color/black"
         android:textStyle="bold"
