--- a/app/src/main/res/layout/list_item_layout.xml
+++ b/app/src/main/res/layout/list_item_layout.xml
@@ -5,9 +5,8 @@
     android:id="@+id/itemRelativeLayout"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_margin="5dp"
-    android:background="#dddddd"
-    android:padding="5dp"
+    android:background="@android:drawable/editbox_background"
+    android:padding="8dp"
     tools:context=".ShowStudentActivity">
 
 
@@ -17,11 +16,9 @@
         android:layout_height="100dp"
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
-        android:layout_marginStart="0dp"
-        android:layout_marginTop="0dp"
         android:contentDescription="@string/app_name"
         android:scaleType="centerCrop"
-        app:srcCompat="@mipmap/ic_launcher" />
+        app:srcCompat="@drawable/android_logo" />
 
     <TextView
         android:id="@+id/nameTextView"
@@ -30,34 +27,31 @@
         android:layout_alignParentStart="true"
         android:layout_alignTop="@+id/imageView"
         android:layout_marginStart="110dp"
-        android:background="@android:color/holo_blue_light"
+        android:background="@drawable/gradient_filled_rectangle"
         android:gravity="center"
-        android:hint="@string/name"
-        android:padding="5dp"
+        android:padding="4dp"
         android:textSize="18sp" />
 
     <TextView
         android:id="@+id/departmentTextView"
-        android:layout_width="75dp"
+        android:layout_width="60dp"
         android:layout_height="wrap_content"
         android:layout_alignBottom="@+id/imageView"
         android:layout_alignStart="@+id/nameTextView"
-        android:background="@android:color/holo_green_light"
+        android:background="@drawable/gradient_filled_rectangle"
         android:gravity="center"
-        android:hint="@string/add"
-        android:padding="5dp"
+        android:padding="4dp"
         android:textSize="18sp" />
 
     <TextView
         android:id="@+id/regTextView"
-        android:layout_width="160dp"
+        android:layout_width="150dp"
         android:layout_height="wrap_content"
         android:layout_alignBottom="@+id/imageView"
         android:layout_alignEnd="@+id/nameTextView"
-        android:background="@android:color/holo_orange_light"
+        android:background="@drawable/gradient_filled_rectangle"
         android:gravity="center"
-        android:hint="@string/reg_no"
-        android:padding="5dp"
+        android:padding="4dp"
         android:textSize="18sp" />
 
 </RelativeLayout>
