--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -17,4 +17,12 @@
         android:id="@+id/about"
         android:title="@string/about" />
 
+    <item
+        android:id="@+id/addStudent"
+        android:title="Add Student" />
+
+    <item
+        android:id="@+id/deleteTable"
+        android:title="Delete Table" />
+
 </menu>
