--- a/app/src/main/res/layout/activity_showstudent.xml
+++ b/app/src/main/res/layout/activity_showstudent.xml
@@ -26,10 +26,13 @@
         android:layout_height="wrap_content"
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
-        android:layout_marginTop="16dp"
+        android:layout_marginTop="8dp"
+        android:background="@drawable/gradient_filled_rectangle"
+        android:padding="4dp"
         android:text="@string/student_name"
         android:textAllCaps="true"
         android:textColor="@android:color/black"
+        android:textSize="14sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/studentImageView"
@@ -41,10 +44,13 @@
         android:layout_height="wrap_content"
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
+        android:layout_marginTop="4dp"
+        android:background="@drawable/gradient_filled_rectangle"
+        android:padding="4dp"
         android:text="@string/father_name"
         android:textAllCaps="true"
         android:textColor="@android:color/black"
+        android:textSize="14sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/studentImageView"
@@ -56,10 +62,13 @@
         android:layout_height="wrap_content"
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
+        android:layout_marginTop="4dp"
+        android:background="@drawable/gradient_filled_rectangle"
+        android:padding="4dp"
         android:text="@string/room"
         android:textAllCaps="true"
         android:textColor="@android:color/black"
+        android:textSize="14sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/studentImageView"
@@ -71,10 +80,13 @@
         android:layout_height="wrap_content"
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
+        android:layout_marginTop="4dp"
+        android:background="@drawable/gradient_filled_rectangle"
+        android:padding="4dp"
         android:text="@string/address"
         android:textAllCaps="true"
         android:textColor="@android:color/black"
+        android:textSize="14sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/studentImageView"
@@ -86,10 +98,13 @@
         android:layout_height="wrap_content"
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
+        android:layout_marginTop="4dp"
+        android:background="@drawable/gradient_filled_rectangle"
+        android:padding="4dp"
         android:text="@string/blood_group"
         android:textAllCaps="true"
         android:textColor="@android:color/black"
+        android:textSize="14sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="1.0"
@@ -99,6 +114,9 @@
 
     <TextView
         android:id="@+id/contactTextView"
+        android:background="@drawable/gradient_filled_rectangle"
+        android:textSize="14sp"
+        android:padding="4dp"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginEnd="8dp"
@@ -111,6 +129,9 @@
 
     <TextView
         android:id="@+id/semesterTextView"
+        android:background="@drawable/gradient_filled_rectangle"
+        android:textSize="14sp"
+        android:padding="4dp"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginEnd="8dp"
@@ -122,6 +143,9 @@
 
     <TextView
         android:id="@+id/batchTextView"
+        android:background="@drawable/gradient_filled_rectangle"
+        android:textSize="14sp"
+        android:padding="4dp"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginEnd="8dp"
@@ -133,6 +157,9 @@
 
     <TextView
         android:id="@+id/departmentTextView"
+        android:background="@drawable/gradient_filled_rectangle"
+        android:textSize="14sp"
+        android:padding="4dp"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginEnd="8dp"
@@ -144,6 +171,9 @@
 
     <TextView
         android:id="@+id/emailTextView"
+        android:background="@drawable/gradient_filled_rectangle"
+        android:textSize="14sp"
+        android:padding="4dp"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginEnd="8dp"
@@ -156,6 +186,9 @@
 
     <TextView
         android:id="@+id/regNoTextView"
+        android:background="@drawable/gradient_filled_rectangle"
+        android:textSize="14sp"
+        android:padding="4dp"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginEnd="8dp"
@@ -168,6 +201,9 @@
 
     <TextView
         android:id="@+id/genderTextView"
+        android:background="@drawable/gradient_filled_rectangle"
+        android:textSize="14sp"
+        android:padding="4dp"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginEnd="8dp"
@@ -213,10 +249,13 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginEnd="8dp"
-        android:layout_marginTop="16dp"
+        android:layout_marginTop="4dp"
+        android:background="@drawable/gradient_filled_rectangle"
+        android:padding="4dp"
         android:text="@string/phone"
         android:textAllCaps="true"
         android:textColor="@android:color/black"
+        android:textSize="14sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toStartOf="@+id/contactTextView"
         app:layout_constraintTop_toBottomOf="@+id/bloodGroupTextView" />
@@ -226,10 +265,13 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginEnd="8dp"
-        android:layout_marginTop="8dp"
+        android:layout_marginTop="4dp"
+        android:background="@drawable/gradient_filled_rectangle"
+        android:padding="4dp"
         android:text="@string/semester"
         android:textAllCaps="true"
         android:textColor="@android:color/black"
+        android:textSize="14sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toStartOf="@+id/semesterTextView"
         app:layout_constraintTop_toBottomOf="@+id/contact" />
@@ -239,10 +281,13 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginEnd="8dp"
-        android:layout_marginTop="8dp"
+        android:layout_marginTop="4dp"
+        android:background="@drawable/gradient_filled_rectangle"
+        android:padding="4dp"
         android:text="@string/batch"
         android:textAllCaps="true"
         android:textColor="@android:color/black"
+        android:textSize="14sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toStartOf="@+id/batchTextView"
         app:layout_constraintTop_toBottomOf="@+id/semester" />
@@ -252,10 +297,13 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginEnd="8dp"
-        android:layout_marginTop="8dp"
+        android:layout_marginTop="4dp"
+        android:background="@drawable/gradient_filled_rectangle"
+        android:padding="4dp"
         android:text="@string/department"
         android:textAllCaps="true"
         android:textColor="@android:color/black"
+        android:textSize="14sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toStartOf="@+id/departmentTextView"
         app:layout_constraintTop_toBottomOf="@+id/batch" />
@@ -265,10 +313,13 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginEnd="8dp"
-        android:layout_marginTop="8dp"
+        android:layout_marginTop="4dp"
+        android:background="@drawable/gradient_filled_rectangle"
+        android:padding="4dp"
         android:text="@string/email"
         android:textAllCaps="true"
         android:textColor="@android:color/black"
+        android:textSize="14sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toStartOf="@+id/emailTextView"
         app:layout_constraintTop_toBottomOf="@+id/gender" />
@@ -278,10 +329,13 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginEnd="8dp"
-        android:layout_marginTop="8dp"
+        android:layout_marginTop="4dp"
+        android:background="@drawable/gradient_filled_rectangle"
+        android:padding="4dp"
         android:text="@string/registration"
         android:textAllCaps="true"
         android:textColor="@android:color/black"
+        android:textSize="14sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toStartOf="@+id/regNoTextView"
         app:layout_constraintTop_toBottomOf="@+id/department" />
@@ -291,16 +345,22 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginEnd="8dp"
-        android:layout_marginTop="8dp"
+        android:layout_marginTop="4dp"
+        android:background="@drawable/gradient_filled_rectangle"
+        android:padding="4dp"
         android:text="@string/gender"
         android:textAllCaps="true"
         android:textColor="@android:color/black"
+        android:textSize="14sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toStartOf="@+id/genderTextView"
         app:layout_constraintTop_toBottomOf="@+id/registrationNo" />
 
     <android.support.constraint.Guideline
         android:id="@+id/guideline2"
+        android:background="@drawable/gradient_filled_rectangle"
+        android:textSize="14sp"
+        android:padding="4dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="vertical"
