added student data, phone facility, msg facility

--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -18,8 +18,8 @@
         android:title="@string/about" />
 
     <item
-        android:id="@+id/addStudent"
-        android:title="Add Student" />
+        android:id="@+id/loadStudent"
+        android:title="Load Student" />
 
     <item
         android:id="@+id/deleteTable"
