--- a/app/src/main/res/layout/activity_showstudent.xml
+++ b/app/src/main/res/layout/activity_showstudent.xml
@@ -222,7 +222,7 @@
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
         android:background="@android:color/holo_green_light"
-        android:onClick="goBack"
+        android:onClick="actionPerformed"
         android:text="@string/call"
         android:textColor="@android:color/white"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -237,7 +237,7 @@
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
         android:background="@android:color/holo_orange_light"
-        android:onClick="goBack"
+        android:onClick="actionPerformed"
         android:text="@string/message"
         android:textColor="@android:color/white"
         app:layout_constraintBottom_toBottomOf="parent"
