show images, edit student data, get images from flickr

--- a/app/src/main/res/menu/menu_showstudent.xml
+++ b/app/src/main/res/menu/menu_showstudent.xml
@@ -1,13 +1,24 @@
 <?xml version="1.0" encoding="utf-8"?>
-<menu xmlns:android="http://schemas.android.com/apk/res/android">
+<menu xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:android="http://schemas.android.com/apk/res/android">
 
     <item
-        android:id="@+id/callBtn"
-        android:title="@string/call" />
+        android:id="@+id/selectImage"
+        android:icon="@android:drawable/ic_menu_camera"
+        android:title="@string/student_image"
+        app:showAsAction="ifRoom" />
 
     <item
         android:id="@+id/msgBtn"
-        android:title="@string/message" />
+        android:icon="@android:drawable/ic_menu_send"
+        android:title="@string/message"
+        app:showAsAction="ifRoom" />
+
+    <item
+        android:id="@+id/callBtn"
+        android:icon="@android:drawable/ic_menu_call"
+        android:title="@string/call"
+        app:showAsAction="ifRoom" />
 
     <item
         android:id="@+id/edit"
