--- a/app/src/main/res/layout/activity_showstudent.xml
+++ b/app/src/main/res/layout/activity_showstudent.xml
@@ -29,11 +29,11 @@
                 android:layout_marginStart="8dp"
                 android:layout_marginTop="8dp"
                 android:contentDescription="@string/student_image"
-                android:scaleType="centerInside"
+                android:scaleType="centerCrop"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
-                app:srcCompat="@drawable/pieas_logo" />
+                app:srcCompat="@drawable/man_icon" />
 
             <LinearLayout
                 android:layout_width="match_parent"
