--- a/app/src/main/res/layout/list_item_layout.xml
+++ b/app/src/main/res/layout/list_item_layout.xml
@@ -17,8 +17,8 @@
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
         android:contentDescription="@string/app_name"
-        android:scaleType="centerInside"
-        app:srcCompat="@drawable/pieas_logo" />
+        android:scaleType="centerCrop"
+        app:srcCompat="@drawable/man_icon" />
 
     <TextView
         android:id="@+id/nameTextView"
