--- a/app/src/main/res/drawable/gradient_filled_rectangle.xml
+++ b/app/src/main/res/drawable/gradient_filled_rectangle.xml
@@ -2,13 +2,14 @@
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
 
     <item>
-        <shape android:shape="rectangle">
-            <corners android:radius="25dp" />
-            <stroke android:width="1dp" android:color="#000000" />
-            <gradient android:angle="-90"
-                android:startColor="#92b3ff"
-                android:endColor="#ffffff"/>
-        </shape>
+
     </item>
 
 </selector>
+<!--<shape android:shape="rectangle">-->
+<!--<corners android:radius="25dp" />-->
+<!--<stroke android:width="1dp" android:color="#000000" />-->
+<!--<gradient android:angle="-90"-->
+    <!--android:startColor="#92b3ff"-->
+    <!--android:endColor="#ffffff"/>-->
+<!--</shape>-->
